# BFB-Website-Re-Design

./: CLAUDE.md  extract_team.js  litellm_config.yaml  package-lock.json  package.json  session-summary.md
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: contact.ts  quizPerfect.ts
app/clients/: page.tsx
app/contact/: page.tsx
app/events/: page.tsx
app/executive-board/: page.tsx
app/join/: page.tsx
app/members/: page.tsx
app/placements/: page.tsx
app/recruitment/: page.tsx
app/recruitment/training/: page.tsx
app/report-draft/: page.tsx
app/resources/newsletters/: page.tsx
app/resources/newsletters-2/: page.tsx
app/team/members/: page.tsx
app/tech/bai/: page.tsx
app/training/: page.tsx
backend/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml
backend/tools/smartcomps/: __init__.py  data_loader.py  embedder.py  router.py  valuation.py
backend/tools/smartcomps/data/processed/: UNIVERSAL_training.parquet
backend/tools/smartcomps/data/raw/: company_tickers.json
backend/tools/smartcomps/models/: valuation_pipeline.joblib
client-projects/: BFB x Charles Schwab - Statement of Work.docx  schwab-case-study-context.md
components/: Approach.tsx  DiversePlacements.tsx  Events.tsx  Footer.tsx  Hero.tsx  LifeAtBFB.tsx  Navbar.tsx  Placements.tsx  PlacementsTicker.tsx  SpeakerSlideshow.tsx  Team.tsx  ThemeToggle.tsx  TrainingQuiz.tsx
lib/: animations.ts  questions.ts  store.ts
public/companies/: perella-weinberg.avif
public/decks/: schwab-deck.pptx
public/placements/: Placement.xlsx
(+31 files in other folders)
