[project]
name = "smartcomps"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan-Fue",email = "ryanfue@ucla.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "yfinance (>=1.2.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "flask (>=3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "torch (>=2.12.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
